# opengles-workspace

./: CMakeLists.txt  LICENSE  README.md  compile_commands.json  main.cpp
include/: SnakeGameState.hpp  context.hpp  exception.hpp  glfw_application.hpp  input.hpp  main_loop.hpp  polled_object.hpp  renderer.hpp  shader.hpp
src/: SnakeGameState.cpp  fragmentShader.frag  glfw_application.cpp  input.cpp  main_loop.cpp  renderer.cpp  shader.cpp  vertexShader.vert
